@@ -9,11 +9,7 @@ public interface Entity {
 
     Entity getParent();
 
-    void registerRelation(Relation r);
     void registerChild(Entity e);
-
-    void removeRelation(Relation r);
     void removeChild(Entity e);
 
-    boolean equals(Object o);
 }
