@@ -1,0 +1,10 @@
+package refmeister.entity.Interfaces;
+
+/**
+ * Created by Caleb on 4/14/2018.
+ */
+public interface Relatable {
+    void registerRelation(Relation r);
+    void removeRelation(Relation r);
+
+}
